# mirdan

./: .mirdan.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
baselines/: 2.0.x-baseline.json  2.0.x-vs-2.1.0-comparison.md  2.1.0-post-state.json
docs/: EVOLUTION_PLAN.md  hooks-setup.md  llm-architecture.md  llm-cli-reference.md  llm-configuration.md  llm-ide-integration.md  llm-quickstart.md  llm-troubleshooting.md  local-intelligence-layer.md
docs/plans/: adaptive-ceremony.md  advanced-intelligence-1.9.0.md  comprehensive-tests-core-modules.md  engineering-intelligence-1.10.0.md  enyal-deep-integration-phase1.md  gap-analysis-expansion-1.1.0.md  mirdan-2.4.0-cursor-realignment.md  semantic-validation-dependency-scanning.md  test-awareness-integration.md
hooks/: pre-commit-config.yaml
hooks/claude-code/: hooks.json  post-edit.sh
hooks/cursor/: hooks.json  post-edit.sh  pre-commit.sh
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
scripts/: measure_baseline.py
src/mirdan/: __init__.py  config.py  models.py  providers.py  server.py
src/mirdan/cli/: __init__.py  check_command.py  checklist_command.py  detect.py  export_command.py  finetune_command.py  fix_command.py  gate_command.py  init_command.py  llm_command.py  llm_setup_command.py  plugin_command.py  profile_command.py  report_command.py  scan_command.py  standards_command.py  triage_command.py  validate_command.py
src/mirdan/coordination/: __init__.py  session_bridge.py
src/mirdan/core/: __init__.py  active_orchestrator.py  agent_coordinator.py  ai_quality_checker.py  analyzer_suite.py  architecture_analyzer.py  auto_fixer.py  brief_validator.py  ceremony.py  check_defaults.py  check_runner.py  client_registry.py  code_validator.py  confidence.py  context_aggregator.py  convention_extractor.py  cross_project.py  decision_analyzer.py  diff_parser.py  entity_extractor.py  environment_detector.py  guardrail_analyzer.py  import_extractor.py  intent_analyzer.py  knowledge_producer.py  language_detector.py  linter_orchestrator.py  linter_parsers.py  linter_runner.py  llm_fixer.py  manifest_parser.py  orchestrator.py  output_formatter.py  pattern_matcher.py  plan_mechanics.py  plan_validator.py  prompt_composer.py  prompt_optimizer.py  python_ast_validator.py  quality_coordinator.py  (+20 more)
src/mirdan/core/framework_rules/: __init__.py  fastapi.py  nextjs.py  react.py
src/mirdan/core/gatherers/: context7.py  enyal.py  filesystem.py  github.py
src/mirdan/core/rules/: __init__.py  ai001_placeholders.py  ai002_imports.py  ai003_over_engineering.py  ai004_duplicate_blocks.py  ai005_error_handling.py  ai006_heavy_imports.py  ai007_security_theater.py  ai008_injection.py  base.py  deep_analysis_rules.py  perf001_n_plus_one.py  perf002_unbounded_collection.py  perf003_sync_in_async.py  perf004_missing_pagination.py  perf005_repeated_computation.py  rs003_undocumented_unsafe.py  sec014_vulnerable_deps.py  test_body_rules.py  test_structure_rules.py
src/mirdan/integrations/: __init__.py  agents_md.py  base.py  claude_code.py  cursor.py  cursor_plugin.py  github_ci.py  hook_templates.py  mcp_apps.py  plugin_validator.py  sarif.py  self_managing.py
src/mirdan/integrations/templates/: github-action.yml  mirdan-agent.mdc  mirdan-always.mdc  mirdan-brief.mdc  mirdan-debug.mdc  mirdan-plan-review.mdc  mirdan-plan-verify.mdc  mirdan-planning.mdc  mirdan-python.mdc  mirdan-security.mdc  mirdan-typescript.mdc  pre-commit-config.yml
src/mirdan/llm/: __init__.py  context_provider.py  health.py  llamacpp.py  manager.py  metrics.py  ollama.py  protocol.py  registry.py  sidecar.py  training_collector.py
src/mirdan/llm/prompts/: __init__.py  checks.py  explain.py  fix.py  optimization.py  research.py  triage.py  validation.py
src/mirdan/standards/: ai_quality.yaml  guardrails.yaml  testing.yaml
src/mirdan/standards/decisions/: api_design.yaml  authentication.yaml  caching.yaml  configuration.yaml  data_access.yaml  error_handling.yaml  state_management.yaml  testing_strategy.yaml
src/mirdan/standards/frameworks/: anthropic-sdk.yaml  aspnetcore.yaml  astro.yaml  autogen.yaml  axum.yaml  convex.yaml  crewai.yaml  drizzle.yaml  dspy.yaml  flutter.yaml  graphql.yaml  haystack.yaml  instructor.yaml  langchain.yaml  langgraph.yaml  llamaindex.yaml  mcp-server.yaml  next.js-15.yaml  openai-agents.yaml  openai-sdk.yaml  opentelemetry.yaml  prisma.yaml  pydantic-ai.yaml  react-19.yaml  react-native.yaml  (+6 more)
src/mirdan/templates/: base.j2  brief.md  generation.j2  plan-flat.md  plan-review-rubric.md  plan-three-layer.md  planning.j2
src/mirdan/usecases/: __init__.py  enhance_prompt.py  helpers.py  propose_subtask_diff.py  quality_standards.py  quality_trends.py  result_types.py  scan_conventions.py  scan_dependencies.py  validate_brief.py  validate_code.py  validate_quick.py  verify_plan.py  verify_plan_against_brief.py
tests/: test_active_orchestrator.py  test_adaptive_thresholds.py  test_agent_coordinator.py  test_agents_md.py  test_ai_quality_checker.py  test_architecture_analyzer.py  test_auto_fix.py  test_auto_fixer.py  test_brief_validator.py  test_ceremony.py  test_check_command_helpers.py  test_check_defaults.py  test_check_runner.py  test_check_runner_fallback.py  test_claude_code_integration.py  test_cli_checklist.py  test_cli_export.py  test_cli_fix.py  test_cli_gate.py  test_cli_init.py  test_cli_plugin.py  test_cli_profile.py  test_cli_report.py  test_cli_scan.py  test_cli_standards.py  test_cli_triage.py  test_cli_validate.py  test_client_registry.py  test_code_validator.py  test_compare_approaches.py  test_confidence.py  test_config_wiring.py  test_context_aggregator.py  test_context_budget.py  test_convention_extractor.py  test_cursor_commands.py  test_cursor_enhanced.py  test_cursor_environment.py  test_cursor_hooks.py  test_cursor_plugin.py  (+86 more)
tests/evidence/: test_determinism.py  test_mechanical_upgrades.py  test_network_isolation.py  test_seed_and_catch.py
tests/integration/: test_ide_parity.py
(+35 files in other folders)
