[project]
name = "mirdan"
dynamic = ["version"]
description = "AI Code Quality Orchestrator - Automatically transforms developer prompts into high-quality, structured requests"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Sean Corkum" }
]
keywords = ["mcp", "ai", "code-quality", "prompt-engineering", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
ast = [
    "tree-sitter>=0.24",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
]
llm = [
    "httpx>=0.28,<0.29",
]
llamacpp = [
    "llama-cpp-python>=0.3.0",
]
enterprise = [
    "truststore>=0.10",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.14",
    "mypy>=1.19",
    "types-PyYAML>=6.0",
]

[project.scripts]
mirdan = "mirdan.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mirdan/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mirdan"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (security)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific
    "PTH",    # use-pathlib
    "ASYNC",  # async best practices
    "PERF",   # perflint
]
ignore = [
    "RUF012",  # Mutable class attributes - intentional for class constants
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108", "E501"]  # Allow assert, /tmp paths, and long lines in tests
"src/mirdan/core/gatherers/**" = ["S110"]  # Allow silent exception handling in optional gatherers
"src/mirdan/core/client_registry.py" = ["ASYNC109"]  # timeout parameter is intentional API design
"src/mirdan/core/active_orchestrator.py" = ["ASYNC109"]  # timeout parameter is passthrough API design
"src/mirdan/llm/prompts/**" = ["E501"]  # Prompt templates and few-shot examples have long lines by design
"src/mirdan/cli/check_command.py" = ["S603", "S110"]  # subprocess.run safe; session bridge write is fire-and-forget
"src/mirdan/llm/context_provider.py" = ["E501", "PERF401"]  # Framework hints; append loop for parsing
"src/mirdan/cli/llm_setup_command.py" = ["E501", "S603", "S607", "SIM105"]  # CLI print; subprocess; try/except for YAML
"src/mirdan/cli/triage_command.py" = ["S110"]  # Session bridge write is fire-and-forget
"src/mirdan/llm/health.py" = ["S607"]  # vm_stat and system_profiler are safe system tools
"src/mirdan/llm/llamacpp.py" = ["RUF005"]  # List concat is clearer than unpacking for message construction
"src/mirdan/llm/manager.py" = ["SIM105"]  # Port file cleanup is clearer with explicit try/except
"src/mirdan/llm/sidecar.py" = ["SIM105"]  # Task cancel + port cleanup are clearer with explicit try/except
"src/mirdan/llm/ollama.py" = ["F841"]  # start timestamp used for elapsed_ms calculation pattern
"src/mirdan/core/smart_validator.py" = ["S101"]  # assert on fix_validator is a programming invariant check
"src/mirdan/core/research_agent.py" = ["SIM103", "E501"]  # Return-condition less readable; gh CLI log messages
"src/mirdan/llm/registry.py" = ["E501"]  # Long docstring line in ModelSelector
"src/mirdan/core/triage.py" = ["E501"]  # Long constructor signature
"src/mirdan/core/check_runner.py" = ["E501", "ASYNC109"]  # Long constructor; timeout param is API design
"src/mirdan/config.py" = ["E501"]  # Long Field descriptions in config classes
"src/mirdan/usecases/validate_code.py" = ["E501", "SIM105", "S110"]  # Long lines in method calls; fire-and-forget context
"src/mirdan/usecases/enhance_prompt.py" = ["E501"]  # Long lines in method calls
"src/mirdan/llm/training_collector.py" = ["PERF401"]  # Append loop is clearer for fire-and-forget pattern
"src/mirdan/core/prompt_optimizer.py" = ["E501"]  # Long constructor signature

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = [
    "tree_sitter",
    "tree_sitter_javascript",
    "tree_sitter_typescript",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "local_llm: requires a running local LLM (Gemma 4 via Ollama or llama-cpp-python)",
    "performance: performance-sensitive tests that assert wall-clock bounds",
]

[tool.coverage.report]
fail_under = 83

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14",
    "mypy>=1.19",
    "types-PyYAML>=6.0",
]
