[project]
name = "mirdan"
dynamic = ["version"]
description = "Deterministic code-quality enforcement and Haiku-proof planning for Claude Code and Cursor — zero-token hooks, fully local"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Sean Corkum" }
]
keywords = ["mcp", "ai", "code-quality", "prompt-engineering", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
ast = [
    "tree-sitter>=0.24",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.15",
    "mypy>=2.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
mirdan = "mirdan.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mirdan/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mirdan"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (security)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific
    "PTH",    # use-pathlib
    "ASYNC",  # async best practices
    "PERF",   # perflint
]
ignore = [
    "RUF012",  # Mutable class attributes - intentional for class constants
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108", "E501"]  # Allow assert, /tmp paths, and long lines in tests
"src/mirdan/core/gatherers/**" = ["S110"]  # Allow silent exception handling in optional gatherers
"src/mirdan/core/client_registry.py" = ["ASYNC109"]  # timeout parameter is intentional API design
"src/mirdan/core/active_orchestrator.py" = ["ASYNC109"]  # timeout parameter is passthrough API design
"src/mirdan/cli/check_command.py" = ["S603", "S110", "ASYNC240"]  # subprocess.run safe; session bridge write is fire-and-forget; ASYNC240: one-shot file check
"src/mirdan/core/check_runner.py" = ["E501", "ASYNC109"]  # Long constructor; timeout param is API design
"src/mirdan/config.py" = ["E501"]  # Long Field descriptions in config classes
"src/mirdan/usecases/validate_code.py" = ["E501", "SIM105", "S110", "ASYNC240"]  # Long lines; fire-and-forget; ASYNC240: one-shot file exists check
# ASYNC240 (Path methods in async fns) suppressed below: infrequent one-shot
# local-file ops on a low-concurrency stdio server, not hot-path async I/O.
"src/mirdan/usecases/scan_conventions.py" = ["ASYNC240"]  # one-shot Path.resolve() at scan start
"src/mirdan/usecases/scan_dependencies.py" = ["ASYNC240"]  # one-shot Path.resolve() at scan start
"src/mirdan/usecases/enhance_prompt.py" = ["E501"]  # Long lines in method calls

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = [
    "tree_sitter",
    "tree_sitter_javascript",
    "tree_sitter_typescript",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "performance: performance-sensitive tests that assert wall-clock bounds",
]

[tool.coverage.report]
fail_under = 83

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15",
    "mypy>=2.0",
    "types-PyYAML>=6.0",
]
